Fix timeline channel heads lagging behind on some devices Fix overflow of panel list with some custom themes

--- a/css/general.css
+++ b/css/general.css
@@ -185,7 +185,6 @@
 	}
 	.list {
 		background-color: var(--color-back);
-		width: 100%;
 		overflow-y: scroll;
 		flex-grow: 1;
 	}
